# energy-prime-back

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  issues.yml  master.yml  pre-commit.yml  release.yml
alembic/: env.py
alembic/versions/: 2023_02_20_2155-435273bf3ae1_added_account_table.py  2023_02_20_2223-b08bf7387745_add_age_to_users.py  2023_02_23_1922-29d9b43d9512_add_email_to_users.py  2023_03_07_1527-baa938a287eb_username.py
app/: main.py
app/__tests__/: __init__.py  test_main.py
app/config/: config.py
app/db/: db.py  models.py
energy_prime_back/: __init__.py  generate_client.py  main.py
energy_prime_back/__tests__/: test_main.py
energy_prime_back/config/: __init__.py  config.py
energy_prime_back/db/: __init__.py  db.py  models.py
