[tool.poetry]
name = "energy-prime-back"
version = "0.1.0"
description = ""
authors = ["DemyCode <verycols@gmail.com>"]
readme = "README.md"
packages = [{ include = "energy_prime_back" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
sqlmodel = "^0.0.8"
httpx = "^0.23.3"
starlette = "^0.25.0"
pydantic = "^1.10.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
types-setuptools = "^67.6.0.0"



[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
coverage = "^7.0.5"
pytest = "^7.2.1"
pre-commit = "^2.21.0"
commitizen = "^2.40.0"
mypy = "^0.991"
bandit = "^1.7.4"
pydocstyle = "^6.3.0"
loguru = "^0.6.0"
ipykernel = "^6.21.2"
pyclean = "^2.7.0"
python-semantic-release = "^7.33.2"

[tool.coverage.run]
source = ["safeworld_data"]
omit = ["__tests__/*", ".venv/*", ".pytest_cache/*"]
dynamic_context = "test_function"

[tool.coverage.report]
fail_under = 80

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.nox
  | _build
  | build
  | dist
  | htmlcov
  | venv
  | .venv
)/
'''

[tool.mypy]
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
]
branch = "master"
upload_to_repository = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_author = "energy-prime-back Build Service"
repository = "energy-prime-back"

[tool.isort]
profile = "black"
known_first_party = "energy_prime_back"
known_third_party = "sqlmodel,sqlalchemy,starlette,fastapi,uvicorn,httpx,pydantic,alembic,psycopg2"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = "alembic"
